# dev-forum

./: README.md
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/api/: auth.rs  categories.rs  mod.rs  users.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs
backend/src/config/: mod.rs
backend/src/db/: migrations.rs  mod.rs
backend/src/error/: mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: category.rs  chat.rs  file.rs  mod.rs  post.rs  reply.rs  stream.rs  subcategory.rs  thread.rs  user.rs
backend/src/services/: file_scanner.rs  mod.rs
backend/src/utils/: file.rs  mod.rs  string.rs
deployment/: SETUP.md  setup_database.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  INSTALLATION.md  PRODUCTION_DEPLOYMENT.md  README.md  SECURITY.md  USER_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src/lib/: api.ts  config.ts
frontend/src/lib/stores/: auth.ts  theme.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
