[package]
name = "dev-forum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"
actix-files = "0.6"

# WebSockets for real-time chat and signaling
actix-web-actors = "4.2"
actix = "0.13"

# Database
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-actix-native-tls", "macros"] }
sea-orm-migration = "0.12"

# Authentication
jsonwebtoken = "8.3"
argon2 = "0.5"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenv = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# File scanning (ClamAV integration)
clamav-rs = { version = "0.5", optional = true }

# Async utilities
futures = "0.3"
tokio = { version = "1.32", features = ["full"] }

# UUID generation
uuid = { version = "1.4", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17.0"
slug = "0.1.6"

[features]
default = []
clamav = ["clamav-rs"]
clamav-rs = ["dep:clamav-rs"]

[dev-dependencies]
# Testing
mockall = "0.11"
tokio-test = "0.4"
